--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,3 +68,9 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+          name: ViaProxyConnect Web Authentication
+          path: build/libs/
